Bug 502479 - Only first app/file/folder drag-and-dropped to a panel is accepted; need to restart plasmashell before the next drop is accepted
Summary: Only first app/file/folder drag-and-dropped to a panel is accepted; need to r...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: 6.3.4
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 503982 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-04-06 09:30 UTC by EatMe
Modified: 2025-05-28 02:36 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments
screen recording (785.02 KB, application/zip)
2025-05-08 09:30 UTC, Stuart
Details

Note You need to log in before you can comment on or make changes to this bug.
Description EatMe 2025-04-06 09:30:50 UTC
A few days ago I installed latest CachyOS ISO selecting Plasma, added my panels and when I go to drag apps to any of them I can only drag one to that panel then I have to logout and back in to drag another one. I have never seen this behavior before any thoughts on what might be causing the issue.

Yesterday I went to setup BlueStar linux and got the same behavior. See my thread on the forum.

https://discuss.kde.org/t/cannot-drag-more-than-one-icon-to-a-panel-at-a-time/32335/1
Comment 1 Nate Graham 2025-04-06 13:53:06 UTC
Can you please be precise about what exactly you're doing and how you're doing it? There are a lot of ways to do the things you've mentioned here, so I fear we will go in circles while trying to reproduce or debug it.

Please read https://community.kde.org/Get_Involved/Issue_Reporting#Step_6:_File_a_high-quality_Bugzilla_ticket and add the missing information like steps to repdoduce, software versions, etc.

Thanks!
Comment 2 EatMe 2025-04-07 09:58:35 UTC
Add a empty panel
Rightclick it edit it's configuration to my liking
Click on the desktop and start typing for the program I want
Drag the program from KRunner to the panel
Repeat the last two steps for the next program on to have it not be added
Do a reboot then I can add another program using the above steps
Comment 3 Nate Graham 2025-04-08 16:55:58 UTC
Thanks for those nice clear steps. Following those steps, I can't reproduce this issue in current git master on Wayland.

Are you using X11? Does the issue reproduce on both X11 and Wayland?
Comment 4 EatMe 2025-04-09 11:21:47 UTC
Running Wayland. The last time I ran x11 cause I didn't like the behavior of Wayland at the time every couple of updates I would reboot to have my desktop shrunk with black edges on all 4 sides. After the second time of it happening and having to jump through a half dozen hoops to fix it I went back to Wayland and haven't looked back.  not want to test in x11 since I do not use it now.
Comment 5 EatMe 2025-04-09 11:24:29 UTC
Should add I realized that I could simply logoff instead of rebooting and then add the next icon. I have since then realized I can just restart the Plasma desktop and be able to add the next icon.
Comment 6 Bug Janitor Service 2025-04-24 03:47:32 UTC
๐Ÿ›๐Ÿงน โš ๏ธ This bug has been in NEEDSINFO status with no change for at least 15 days. Please provide the requested information, then set the bug status to REPORTED. If there is no change for at least 30 days, it will be automatically closed as RESOLVED WORKSFORME.

For more information about our bug triaging procedures, please read https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging.

Thank you for helping us make KDE software even better for everyone!
Comment 7 Stuart 2025-05-07 10:27:48 UTC
I have this issue and found this bug report. I am running openSUSE Tumbleweed with KDE Plasma Version: 6.3.4 KDE Frameworks Version: 6.13.0 running Wayland the system is fully updated as of today 7th June 2025. When I drag an application icon from the menu to the panel the first icon stays put but in order to add any more icons I have to logout and back in each time and then they stay put, so adding 4 icons requires 3 logouts after the first. I have not yet tried this on x11.

I am quite happy to provide any more information you need to resolve this.

Stuart
Comment 8 EatMe 2025-05-07 10:53:19 UTC
Just did a fresh install of BlueStar Linux and same thing.
Comment 9 Nate Graham 2025-05-07 16:49:07 UTC
Can someone attach a screen recording that shows it happening?
Comment 10 Stuart 2025-05-08 09:30:59 UTC
Created attachment 181058 [details]
screen recording

screen recording
Comment 11 Stuart 2025-05-08 09:32:26 UTC
I have created a screen recording dragging first Filezilla from the menu to the panel which works, followed by Q4wine but this fails to add.

Stuart
Comment 12 Nate Graham 2025-05-08 14:41:42 UTC
Thanks, I can perfectly reproduce the issue now.
Comment 13 Nate Graham 2025-05-13 17:54:48 UTC
*** Bug 503982 has been marked as a duplicate of this bug. ***
Comment 14 Marco Martin 2025-05-26 10:04:32 UTC
Git commit a363cfcfa77883018c6d86f3c929284d4ba306f9 by Marco Martin.
Committed on 26/05/2025 at 09:24.
Pushed by mart into branch 'master'.

drag and drop: delete the menu if there are no actions to show

It's possible that there are no actions to show, when the mime
job doesn't fund anything, we fall back to the icon applet.
if there are no actions to show, the menu won't be shown at all, therefore
won't be deleted, breaking every subsequent drop.
Delete the menu immediately in this case
Related: bug 460056

M  +4    -0    src/plasmaquick/plasmoid/dropmenu.cpp

https://invent.kde.org/plasma/libplasma/-/commit/a363cfcfa77883018c6d86f3c929284d4ba306f9
Comment 15 Marco Martin 2025-05-26 10:15:14 UTC
Git commit c7d583c98f5c0cedab8564d5d5b751b6184be81a by Marco Martin.
Committed on 26/05/2025 at 10:14.
Pushed by mart into branch 'Plasma/6.4'.

drag and drop: delete the menu if there are no actions to show

It's possible that there are no actions to show, when the mime
job doesn't fund anything, we fall back to the icon applet.
if there are no actions to show, the menu won't be shown at all, therefore
won't be deleted, breaking every subsequent drop.
Delete the menu immediately in this case
Related: bug 460056

M  +4    -0    src/plasmaquick/plasmoid/dropmenu.cpp

https://invent.kde.org/plasma/libplasma/-/commit/c7d583c98f5c0cedab8564d5d5b751b6184be81a