drag and drop: delete the menu if there are no actions to show

It's possible that there are no actions to show, when the mime
job doesn't fund anything, we fall back to the icon applet.
if there are no actions to show, the menu won't be shown at all, therefore
won't be deleted, breaking every subsequent drop.
Delete the menu immediately in this case

CCBUG:460056
BUG:502479